# OpenAI-Hackathon

./: .env.example  .gitignore  .vercelignore  AGENTS.md  AGENT_CONTRACT.yaml  AGENT_PROTOCOL.md  API_CONTRACTS.md  ARCHITECTURE.md  AUTONOMOUS_MONITORING.md  BLUEPRINT.md  CLAUDE.md  CODEX.md  COGNITIVE_AUTHENTICITY_PATCH.md  CONTRACT_SYSTEM.md  CORRELATION_ENGINE.md  CUSTOM_INVESTIGATION_GUIDE.md  DATABASE_SCHEMA.md  DEAD_LETTER_QUEUES.md  DECISIONS.md  DEMO_CINEMA_MODE.md  DEPLOYMENT.md  DETERMINISM.md  DIAGNOSTICS.md  DOCKER_BOOT.md  Dockerfile  EVALUATION.md  EVENT_SCHEMA.md  FAILOVER.md  FAILURE_RECOVERY.md  FINAL_DEMO_FLOW.md  GEMINI.md  GOVERNANCE.md  GRAPH_ARCHITECTURE.md  HATSOFF.md  INTEGRATION_TESTING.md  INTERACTIVE_TESTING.md  INVESTIGATION_LIFECYCLE.md  INVESTIGATION_WORKFLOWS.md  LINEAGE_TRACKING.md  LIVE_COGNITION_GUIDE.md  (+48 more)
.github/workflows/: ci.yml
api/: index.py
app/: __init__.py
app/agents/: __init__.py  base.py  (+7 more)
backend/: __init__.py  main.py  security_headers.py  test_pdf_ocr.py
deploy/: production.env.example
docs/: INDEX.md
prompts/: README.md
scripts/: benchmark_dataset.py  custom_investigation.py  demo_mode.sh  dev_bootstrap.sh  final_runtime_validation.py  full_multimodal_ai_validation.py  generate_audio_testcase.py  gui_server.py  live_cognition_validation.py  live_gui_validation.py  live_real_evidence_validation.py  live_real_provider_validation.py  live_real_validation.py  quick_multimodal_proof.py  reset_runtime.sh  start_hermes.sh  test.py  tmp_text_in.txt  tui_launcher.py  validate_input.py  validate_live_providers.py
test_assets/: README.md
tests/: __init__.py
(+370 files in other folders)
