[project]
name = "hermes-x"
version = "0.1.0"
description = "Autonomous cyber intelligence workspace for internship and recruitment scam defense."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pillow>=10.4.0",
  "pypdf>=4.3.1",
  "pytesseract>=0.3.13",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "pymongo>=4.10.1",
  "redis>=5.0.8",
  "requests>=2.32.0",
  "rich>=13.7.1",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
